deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: oip-webapp-prod
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: oip-webapp-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-webapp-prod
spec:
  selector:
    matchLabels:
      app: oip-webapp-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-webapp-prod
    spec:
      containers:
      - name: oip-webapp-prod
        image: socialalphaoip/angular-webapp:prod
        ports:
        - containerPort: 80
---
